--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                     </div>
                 </div>
         </div>
-        <a href="images/my cv 3.doc"><button>Download CV</button></a>
+        <a href="images/resume.pdf"><button>Download CV</button></a>
     </section>
 
     <section class="portfolioWorks" id="works">
